<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World日志</string>
    <string name="action_settings">Settings</string>
    <string name="top_text">我的日志</string>
    <string name="addnotes">添加日志</string>
    <string name="btnSave">保存</string>
    <string name="btnCancel">取消</string>
    <string name="btnAddPhoto">拍照</string>
    <string name="btnAddVideo">录像</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="updata">检查更新</string>
    <string name="help">帮助和反馈</string>
    <string name="version_name">版本：v1.0.0_20161214</string>
    <string name="contacts">联系人：林文富</string>
    <string name="qq">QQ:766244492</string>
    <string name="email">766244492@qq.com</string>
    <string name="net">http://www.linxx.com</string>
    <string name="tv_help">帮助和反馈</string>
    <string name="help_title">应用帮助：</string>
    <string name="help_content">\t\tWorld日志可以随时记录你的每一天，你可以用文字、照片、视频记录下你的精彩瞬间，同时别忘了点击保存哦！长按某条日志可将它丢弃呦！</string>
    <string name="advise_title">请输入你的反馈信息:</string>
    <string name="btn_advise">点击提交</string>
</resources>