<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#addd"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/tv_help"
            android:textSize="25sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_title"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:text="@string/help_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advise_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:background="#fff"
        android:ems="10"
        android:gravity="top" />

    <Button
        android:id="@+id/btn_saveaAdvise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#a3ff"
        android:text="@string/btn_advise" />

</LinearLayout>