<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <!--       <RelativeLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" >

                  <ImageView
                      android:id="@+id/menu_img1"
                      android:layout_width="50dp"
                      android:layout_height="50dp"
                      android:layout_centerVertical="true"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="20dp"
                      android:src="@drawable/menu_img1" />

                  <TextView
                      android:id="@+id/tvSetting"
                      android:layout_width="120dp"
                      android:layout_height="wrap_content"
                      android:layout_centerVertical="true"
                      android:layout_marginLeft="20dp"
                      android:layout_toRightOf="@+id/menu_img1"
                      android:clickable="true"
                      android:text="@string/setting"
                      android:textSize="20sp" />
              </RelativeLayout>
       -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_img2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/menu_img2" />

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/menu_img2"
                android:clickable="true"
                android:text="@string/about"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_img3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/menu_img3" />

            <TextView
                android:id="@+id/tvUpdate"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/menu_img3"
                android:clickable="true"
                android:text="@string/updata"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/menu_img4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/menu_img4" />

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/menu_img4"
                android:clickable="true"
                android:text="@string/help"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>